# longcat-burn

./: .gitignore  Cargo.toml
examples/: convert_dit_to_bpk.rs  convert_vae_to_bpk.rs  generate.rs  test_dit_bpk.rs
src/: config.rs  lib.rs  load.rs  pipeline.rs  scheduler.rs
src/modules/: attention.rs  dit.rs  embeddings.rs  feed_forward.rs  memory.rs  mod.rs  modulation.rs  normalization.rs  rope.rs  vae.rs
